backfill some url building tests, which exposes the fact that they don’t work

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,16 +16,19 @@
       }
     };
   </script>
-  <script src="../bower_components/qunit/qunit/qunit.js"></script>
-  <script src="../bower_components/jquery/dist/jquery.js"></script>
-  <script src="../bower_components/handlebars/handlebars.js"></script>
-  <script src="../bower_components/ember/ember.js"></script>
-  <script src="../bower_components/ember-data/ember-data.js"></script>
-  <script src="helpers/begin.js"></script>
-  <script src="helpers/setup_store.js"></script>
-  <script src="../src/json_api_adapter.js"></script>
-  <script src="../src/json_api_serializer.js"></script>
-  <script src="integration/adapter_test.js"></script>
-  <script src="integration/serializer_test.js"></script>
+  <script src='../bower_components/qunit/qunit/qunit.js'></script>
+  <script src='../bower_components/jquery/dist/jquery.js'></script>
+  <script src='../bower_components/handlebars/handlebars.js'></script>
+  <script src='../bower_components/ember/ember.js'></script>
+  <script src='../bower_components/ember-data/ember-data.js'></script>
+  <script src='helpers/begin.js'></script>
+  <script src='helpers/setup_store.js'></script>
+  <script src='../src/json_api_adapter.js'></script>
+  <script src='../src/json_api_serializer.js'></script>
+  <script src='unit/adapter/ajax_error_test.js'></script>
+  <script src='unit/adapter/build_url_test.js'></script>
+  <script src='unit/serializer/extract_links_test.js'></script>
+  <script src='integration/serializer_test.js'></script>
+  <script src='integration/adapter_test.js'></script>
 </body>
 </html>
