--- a/tests/index.html
+++ b/tests/index.html
@@ -30,5 +30,6 @@
   <script src='unit/serializer/extract_links_test.js'></script>
   <script src='integration/serializer_test.js'></script>
   <script src='integration/adapter_test.js'></script>
+  <script src="/testem.js"></script>
 </body>
 </html>
