Adds Broccoli and moves current code to ES6
Instead of Grunt, we're moving towards Broccoli for building and
testing. It's simpler and is being embraced by Ember itself.

This commit makes all tests pass with Broccoli as server. Plus, code is
now using ES6 modules.

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,33 +2,35 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit Example</title>
-  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
-</head>
-<body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-
+  <title>Ember Data JSONApi Adapter</title>
+  <link rel="stylesheet" href="../qunit.css" type="text/css" charset="utf-8">
   <script>
+    window.TEST = true;
     window.ENV = {
       FEATURES: {
         'ember-runtime-test-friendly-promises': true
       }
     };
   </script>
-  <script src='../bower_components/qunit/qunit/qunit.js'></script>
-  <script src='../bower_components/jquery/dist/jquery.js'></script>
-  <script src='../bower_components/handlebars/handlebars.js'></script>
-  <script src='../bower_components/ember/ember.js'></script>
-  <script src='../bower_components/ember-data/ember-data.js'></script>
-  <script src='helpers/begin.js'></script>
-  <script src='helpers/setup_store.js'></script>
-  <script src='../src/json_api_adapter.js'></script>
-  <script src='../src/json_api_serializer.js'></script>
-  <script src='unit/adapter/ajax_error_test.js'></script>
-  <script src='unit/adapter/build_url_test.js'></script>
-  <script src='unit/serializer/extract_links_test.js'></script>
-  <script src='integration/serializer_test.js'></script>
-  <script src="/testem.js"></script>
+</head>
+<body>
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
+
+  <!-- adapter -->
+  <script src="../assets/app.js"></script>
+
+  <!-- tests -->
+  <script src='../tests/helpers/begin.js'></script>
+  <script src='../tests/helpers/setup_store.js'></script>
+
+  <script src='../tests/unit/adapter/ajax_error_test.js'></script>
+  <script src='../tests/unit/adapter/build_url_test.js'></script>
+  <script src='../tests/unit/serializer/extract_links_test.js'></script>
+  <script src='../tests/integration/serializer_test.js'></script>
+
+  <!-- previous code
+  <script src="../vendor/testem.js"></script>
+  -->
 </body>
 </html>
