--- a/tests/index.html
+++ b/tests/index.html
@@ -37,6 +37,7 @@
   <script src='../tests/integration/specs/urls-for-resource-collections-test.js'></script>
   <script src='../tests/integration/specs/compound-documents-test.js'></script>
   <script src='../tests/integration/specs/creating-an-individual-resource-test.js'></script>
+  <script src='../tests/integration/specs/updating-an-individual-resource-test.js'></script>
   <script src='../tests/unit/adapter/ajax_error_test.js'></script>
   <script src='../tests/unit/adapter/build_url_test.js'></script>
   <script src='../tests/unit/serializer/extract_links_test.js'></script>
