--- a/tests/index.html
+++ b/tests/index.html
@@ -39,6 +39,7 @@
   <script src='../tests/integration/specs/compound-documents-test.js'></script>
   <script src='../tests/integration/specs/creating-an-individual-resource-test.js'></script>
   <script src='../tests/integration/specs/updating-an-individual-resource-test.js'></script>
+  <script src='../tests/integration/specs/link-with-type.js'></script>
   <script src='../tests/unit/adapter/ajax_error_test.js'></script>
   <script src='../tests/unit/adapter/build_url_test.js'></script>
   <script src='../tests/unit/serializer/extract_links_test.js'></script>
