--- a/tests/index.html
+++ b/tests/index.html
@@ -36,6 +36,7 @@
   <script src='../tests/integration/specs/to-many-relationships-test.js'></script>
   <script src='../tests/integration/specs/urls-for-resource-collections-test.js'></script>
   <script src='../tests/integration/specs/href-link-for-resource-collection-test.js'></script>
+  <script src='../tests/integration/specs/multiple-resource-links-test.js'></script>
   <script src='../tests/integration/specs/compound-documents-test.js'></script>
   <script src='../tests/integration/specs/creating-an-individual-resource-test.js'></script>
   <script src='../tests/integration/specs/updating-an-individual-resource-test.js'></script>
