Removing experimental features

--- a/tests/index.html
+++ b/tests/index.html
@@ -6,11 +6,7 @@
   <link rel="stylesheet" href="../qunit.css" type="text/css" charset="utf-8">
   <script>
     window.TEST = true;
-    window.ENV = {
-      FEATURES: {
-        'ember-runtime-test-friendly-promises': true
-      }
-    };
+    window.ENV = {};
   </script>
 </head>
 <body>
