Adding namespace test

--- a/tests/index.html
+++ b/tests/index.html
@@ -38,6 +38,7 @@
   <script src='../tests/integration/specs/updating-an-individual-resource-test.js'></script>
   <script src='../tests/integration/specs/link-with-type.js'></script>
   <script src='../tests/integration/specs/null-relationship-test.js'></script>
+  <script src='../tests/integration/specs/namespace-test.js'></script>
   <script src='../tests/unit/adapter/ajax-error-test.js'></script>
   <script src='../tests/unit/adapter/build-url-test.js'></script>
   <script src='../tests/unit/serializer/extract-links-test.js'></script>
