--- a/tests/index.html
+++ b/tests/index.html
@@ -6,11 +6,7 @@
   <link rel="stylesheet" href="../qunit.css" type="text/css" charset="utf-8">
   <script>
     window.TEST = true;
-    window.ENV = {
-      FEATURES: {
-        'ember-runtime-test-friendly-promises': true
-      }
-    };
+    window.ENV = {};
   </script>
 </head>
 <body>
@@ -36,11 +32,13 @@
   <script src='../tests/integration/specs/to-many-relationships-test.js'></script>
   <script src='../tests/integration/specs/urls-for-resource-collections-test.js'></script>
   <script src='../tests/integration/specs/href-link-for-resource-collection-test.js'></script>
+  <script src='../tests/integration/specs/multiple-resource-links-test.js'></script>
   <script src='../tests/integration/specs/compound-documents-test.js'></script>
   <script src='../tests/integration/specs/creating-an-individual-resource-test.js'></script>
   <script src='../tests/integration/specs/updating-an-individual-resource-test.js'></script>
   <script src='../tests/integration/specs/link-with-type.js'></script>
   <script src='../tests/integration/specs/null-relationship-test.js'></script>
+  <script src='../tests/integration/specs/namespace-test.js'></script>
   <script src='../tests/unit/adapter/ajax-error-test.js'></script>
   <script src='../tests/unit/adapter/build-url-test.js'></script>
   <script src='../tests/unit/serializer/extract-links-test.js'></script>
