--- a/tests/index.html
+++ b/tests/index.html
@@ -25,11 +25,13 @@
   <script src='../tests/helpers/begin.js'></script>
   <script src='../tests/helpers/setup-store.js'></script>
   <script src='../tests/helpers/setup-models.js'></script>
+  <script src='../tests/helpers/setup-polymorphic-models.js'></script>
 
   <script src='../tests/integration/specs/individual-resource-representations-test.js'></script>
   <script src='../tests/integration/specs/resource-collection-representations-test.js'></script>
   <script src='../tests/integration/specs/to-one-relationships-test.js'></script>
   <script src='../tests/integration/specs/to-many-relationships-test.js'></script>
+  <script src='../tests/integration/specs/to-many-polymorphic-test.js'></script>
   <script src='../tests/integration/specs/urls-for-resource-collections-test.js'></script>
   <script src='../tests/integration/specs/href-link-for-resource-collection-test.js'></script>
   <script src='../tests/integration/specs/multiple-resource-links-test.js'></script>
