Disable Ember prototype extensions in tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -7,6 +7,9 @@
   <script>
     window.TEST = true;
     window.ENV = {};
+    window.EmberENV = {
+      EXTEND_PROTOTYPES: false
+    };
   </script>
 </head>
 <body>
